src/tui/components/snapshots/awsui__tui__components__container_picker__tests__render_returns_snapshot_when_filtered_with_selection.snap
---
source: src/tui/components/container_picker.rs
expression: buffer_to_string(&terminal)
---
                                                            
                                                            
                                                            
                                                            
               ┌ Select Container ──────────┐               
               │/w                          │               
               │Container                   │               
               │web                         │               
               │worker                      │               
               └────────────────────────────┘
